Back button & Cancel button
Added Back button in the action bar
Added Cancel button in New contact page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NewContactActivity"></activity>
+        <activity android:name=".NewContactActivity"
+            android:parentActivityName=".MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
